--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,6 +35,7 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
         cau_hoi_da_thi.h cau_hoi_da_thi.cpp
         sinhvien.h sinhvien.cpp
         sinhvien.h sinhvien.cpp
+        lop.h lop.cpp
     )
 # Define target properties for Android with Qt 6 as:
 #    set_property(TARGET THI_TRAC_NGHIEM APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
